// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing textPoll component with snapshot Testing TextPoll with the necessary props and isCheck={true} should have checked svg 1`] = `
<button
  className="btnBody"
  data-testid="testId1"
  disabled={false}
  id="testId1"
  onClick={[Function]}
  type="button"
>
  <span
    className="flex-container"
  >
    <span
      className="letter"
    >
      A
    </span>
    <p
      className="option"
    >
       
      Option one
       
    </p>
    <span />
    <span
      className="svg-check"
    >
      <svg
        className="svgDark"
        data-file-name="SvgCheckMarkDefault"
      />
    </span>
  </span>
</button>
`;

exports[`Testing textPoll component with snapshot Testing TextPoll with the necessary props and letter="a" should have <span>A</span>  1`] = `
<button
  className="btnBody"
  data-testid="testId1"
  disabled={false}
  id="testId1"
  onClick={[Function]}
  type="button"
>
  <span
    className="flex-container"
  >
    <span
      className="letter"
    >
      A
    </span>
    <p
      className="option"
    >
       
      Option one
       
    </p>
    <span />
  </span>
</button>
`;

exports[`Testing textPoll component with snapshot Testing TextPoll with the necessary props and mostVoted={true} showResult={true} should have class of bg-primary-shd1  1`] = `
<button
  className="btnBody mostVoted"
  data-testid="testId1"
  disabled={true}
  id="testId1"
  onClick={[Function]}
  type="button"
>
  <span
    className="flex-container"
  >
    <span
      className="letter"
    >
      A
    </span>
    <p
      className="option"
    >
       
      Option one
       
    </p>
    <span />
  </span>
  <span
    className="percentage"
  >
    <svg
      className="goldenStarIcon"
      data-file-name="SvgGoldenStar"
    />
    %
  </span>
</button>
`;

exports[`Testing textPoll component with snapshot Testing TextPoll with the necessary props and showResult={true} percentage={20} should have <span>20%</span>  1`] = `
<button
  className="btnBody leastVoted"
  data-testid="testId1"
  disabled={true}
  id="testId1"
  onClick={[Function]}
  type="button"
>
  <span
    className="flex-container"
  >
    <span
      className="letter"
    >
      A
    </span>
    <p
      className="option"
    >
       
      Option one
       
    </p>
    <span />
  </span>
  <span
    className="percentage"
  >
    
    20
    %
  </span>
</button>
`;

exports[`Testing textPoll component with snapshot Testing TextPoll with the necessary props should not have letter 1`] = `
<button
  className="btnBody"
  data-testid="testId1"
  disabled={false}
  id="testId1"
  onClick={[Function]}
  type="button"
>
  <span
    className="flex-container"
  >
    <span
      className="letter"
    >
      A
    </span>
    <p
      className="option"
    >
       
      Option one
       
    </p>
    <span />
  </span>
</button>
`;
